# pyProject

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/pyproject/: main.py
tests/: test_main.py
