[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pyproject"
version = "0.1.0"
description = "A demo Python project for GitHub integration testing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jason Chong", email = "jason0401chong@gmail.com"},
]

[project.scripts]
pyproject = "pyproject.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
